# src/controllers/author.controller.ts
@@ -1,4 +1,4 @@
-import {Controller, Get, Post, Delete, Route, Path, Body, Tags, Patch} from "tsoa";
+import {Controller, Get, Post, Delete, Route, Path, Body, Tags, Patch, Security} from "tsoa";
 import {authorService} from "../services/author.service";
 import {AuthorDTO} from "../dto/author.dto";
 import {Author} from "../models/author.model";
@@ -12,6 +12,7 @@ import {bookService} from "../services/book.service";
 export class AuthorController extends Controller {
     // Récupère tous les auteurs
     @Get("/")
+    @Security("jwt", ["write", "read"])
     public async getAllAuthors(): Promise<AuthorDTO[]> {
         return authorService.getAllAuthors();
     }
