# src/dto/authentication.dto.ts
@@ -1,0 +1,5 @@
+export  interface AuthenticationDTO {
+    grant_type: string;
+    username: string;
+    password: string;
+}
